@@ -24,6 +24,8 @@
     <string id="30022">Telecine</string>
     <string id="30023">TeleSync</string>
     <string id="30024">HDRip</string>
+    <string id="30025">Complete BluRay</string>
+    <string id="30026">RC</string>
     <!-- music -->
     <string id="30030">Music</string>
     <string id="30031">MP3</string>
@@ -39,6 +41,7 @@
     <!-- ebooks -->
     <string id="30050">Ebooks</string>
     <string id="30051">Comics</string>
+    <string id="30052">Magazines</string>
     <!-- apps -->
     <string id="30055">Apps</string>
     <string id="30056">Mac</string>
@@ -94,6 +97,7 @@
     <string id="30372">netload.in</string>
     <string id="30373">depositfiles.com</string>
     <string id="30374">filepost.com</string>
+    <string id="30375">bitshare.com</string>
     
     <!-- Strings used by DDLScraper -->
     <!-- Menu strings -->
@@ -110,6 +114,7 @@
     <string id="30604">Couldn't scrape any filehoster links</string>
     
     <string id="30700">Fetch posts...</string>
+    <string id="30701">Fetch filehosters...</string>
     
     <string id="30800">Added %d link(s) to JDownloader</string>
     <string id="30801">Add Links</string>
